# fkit

./: .env  .gitignore  Cargo.toml  README.md  flake.nix  hurl.hurl  tests.hurl
.github/workflows/: testing.yaml
api/: Cargo.toml
api/src/: main.rs
api/src/conf/: lib.rs
api/src/config/: config.rs
api/src/utils/: utils.rs
database/: .env  Cargo.toml  build.db
database/.sqlx/: query-02e3428d7976628b1aa628b181ce668757dadbe0da7386f38c863cd097c7e499.json  query-27ef1883ef3e3bcd76159912c2edb9c3a188a95542dd43c75e51118291bd36ea.json  query-83bad8c34ba48f0d1e26f7450fed9efbc356d236d9e57ee986355cb55a98977e.json
database/migrations/: 20240321144125_init.sql  20240325154739_init.sql  20240325154739_main.sql
database/src/: database.rs  lib.rs  prisma.rs  project.rs  types.rs  utils.rs
database/tests/: end_to_end.rs  from_file.rs  simple.db  stress_tests.rs
database/tests/.read_files/: simple.db
database/tests/utils/: mod.rs
hurl_tests/: data1.hurl  data2_1.hurl  data2_2.hurl  project1.hurl  project2.hurl
prisma/: schema.prisma
prisma-cli/: Cargo.toml
src/: main.rs  prisma.rs
tests/: add_datapoints_1.hurl  add_datapoints_2.hurl  add_project_1.hurl  add_project_2.hurl
