[package]
name = "fkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
database = { path = "../database" }
clap = { version = "4.5.4", features = ["derive"] }
config = { version = "0.14.0", features = ["toml"] }
serde = { version = "1.0.197", features = ["derive"] }
