[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
serde = "1.0.197"
sqlx = { version = "0.7.4", features = ["chrono", "runtime-tokio", "any", "all-databases"] }
